OBSAI UDP-based Communication Protocol (UDPCP)
AudioCodes Debug Recording (ACDR)
Tunnel Extensible Authentication Protocol (TEAP)
USB Printer (USBPRINTER)
Java Debug Wire Protocol (JDWP)
ScyllaDB RPC
Dynamic Link Exchange Protocol (DLEP)
LBM Stateful Resolution Service (LBMSRS)
Asphodel Protocol
Technically Enhanced Capture Module Protocol (TECMP)
Fortinet Single Sign-on (FSSO)
=======
--

=== Updated Protocol Support

Too many protocols have been updated to list here.

=== New and Updated Capture File Support

// There is no new or updated capture file support in this release.
// Add one file type per line between the -- delimiters.
[commaize]
--
--

// === New and Updated Capture Interfaces support

//_Non-empty section placeholder._

// === Major API Changes

== Getting Wireshark

Wireshark source code and installation packages are available from
https://www.wireshark.org/download.html.

=== Vendor-supplied Packages

Most Linux and Unix vendors supply their own Wireshark packages. You can
usually install or upgrade Wireshark using the package management system
specific to that platform. A list of third-party packages can be found
on the https://www.wireshark.org/download.html#thirdparty[download page]
on the Wireshark web site.

== File Locations

Wireshark and TShark look in several different locations for preference
files, plugins, SNMP MIBS, and RADIUS dictionaries. These locations vary
from platform to platform. You can use About→Folders to find the default
locations on your system.

== Getting Help

The User’s Guide, manual pages and various other documentation can be
found at https://www.wireshark.org/docs/

Community support is available on https://ask.wireshark.org/[Wireshark’s
Q&A site] and on the wireshark-users mailing list. Subscription
information and archives for all of Wireshark’s mailing lists can be
found on https://www.wireshark.org/lists/[the web site].

Bugs and feature requests can be reported on
https://bugs.wireshark.org/[the bug tracker].